[package]
name = "ferris-gc"
version = "0.2.0"
authors = ["redradist, redradist@gmail.com"]
description = "Flexible implementation of garbage collector for Rust"
repository = "https://github.com/redradist/ferris-gc"
readme = "../README.md"
license = "Apache-2.0 OR MIT"
keywords = ["garbage", "memory"]
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["lazy_static"]
proc-macro = ["ferris-gc-proc-macro"]

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
ferris-gc-proc-macro = { path = "../ferris_gc_proc_macro", version = "0.2.0", optional = true }

[dev-dependencies]
ferris-gc-proc-macro = { path = "../ferris_gc_proc_macro", version = "0.2.0" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gc_bench"
harness = false