[package]
name = "ferris-gc-proc-macro"
version = "0.2.0"
authors = ["redradist, redradist@gmail.com"]
description = "Derive macros for ferris-gc: #[derive(Trace, Finalize)] and #[ferris_gc_main]"
repository = "https://github.com/redradist/ferris-gc"
license = "Apache-2.0 OR MIT"
keywords = ["garbage", "gc", "macro"]
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.3", features = ["full"] }

[lib]
proc-macro = true