[package]
name = "ferris-gc-proc-macro"
version = "0.1.1"
authors = ["redradist, redradist@gmail.com"]
description = "Plugin for ferris-gc"
license = "APACHE-2.0, MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.3", features = ["full"] }

[lib]
proc-macro = true